--- a/frontend/src/components/css/Sidebar.css
+++ b/frontend/src/components/css/Sidebar.css
@@ -1,16 +1,11 @@
 /* Sidebar.css */
 .sidebar {
   width: 170px;
-  background-color: #020135;
-  height: calc(100vh - 50px);
-  /* Adjust height minus navbar height */
+  height: calc(100vh - 50px); /* Adjust height minus navbar height */
   position: fixed;
-  top: 97px;
-  /* Set top position to navbar height */
+  top: 97px; /* Set top position to navbar height */
   left: 0;
-  z-index: 1000;
-  /* Ensure sidebar is above other content */
-
+  z-index: 1000; /* Ensure sidebar is above other content */
 }
 
 .sidebar ul {
@@ -22,21 +17,18 @@
   padding: 10px;
 }
 
-
-
-li a,
 .dropbtn {
   display: inline-block;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-size: 110%;
 }
 
-li a:hover,
 .dropdown:hover .dropbtn {
-  background-color: #020135;
-
+  background-color: #27012d;
+  color: white;
 }
 
 li.dropdown {
@@ -46,10 +38,10 @@ li.dropdown {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #000000;
+  background-color: #27012d;
   min-width: 160px;
-  /* box-shadow: 0px 8px 16px 0px rgba(239, 87, 87, 0.2); */
   z-index: 1;
+  margin-left: 60%;
 }
 
 .dropdown-content a {
@@ -61,7 +53,7 @@ li.dropdown {
 }
 
 .dropdown-content a:hover {
-  background-color: #050405;
+  background-color: #27012d;
 }
 
 .dropdown:hover .dropdown-content {
@@ -70,6 +62,31 @@ li.dropdown {
 }
 
 .btn {
-  background-color: #020135;
-  color: rgb(236, 232, 232);
+  background-color: #27012d;
+  color: rgb(255, 255, 255);
+}
+
+.btn:hover {
+  background-color: #27012d;
+}
+
+/* Dark mode styles */
+body.dark-mode .sidebar {
+  background-color: #1e1e1e;
+}
+
+body.dark-mode .dropbtn {
+  color: #ffffff;
+}
+
+body.dark-mode .dropdown-content {
+  background-color: #1e1e1e;
+}
+
+body.dark-mode .dropdown-content a {
+  color: #ffffff;
+}
+
+body.dark-mode .dropdown-content a:hover {
+  background-color: #333;
 }
