--- a/frontend/src/components/css/Uploadpdf.css
+++ b/frontend/src/components/css/Uploadpdf.css
@@ -1,52 +1,3 @@
-/* .uploadpdf {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 50px;
-    flex-direction: column;
-}
-
-.pdfform {
-    padding: 50px;
-    border: 1px solid rgb(0, 0, 0);
-    width: 30%;
-    text-align: center;
-
-}
-
-.form-control {
-    border-color: rgb(0, 0, 0) !important;
-}
-
-
-.uploaded {
-    margin-top: 30px;
-    width: 100%;
-    text-align: center;
-
-}
-
-.output-div {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.inner-div {
-    display: flex;
-    flex-direction: column;
-}
-
-
-
-.pdf-div {
-    padding: 50px;
-    background-color: #dedede;
-    margin-top: 50px;
-}
-
-canvas.react-pdf__Page__canvas {
-    margin-bottom: 50px;
-} */
 .uploadpdf{
     display: flex;
     justify-content: center;
@@ -68,7 +19,32 @@ canvas.react-pdf__Page__canvas {
 .form-control{
     border-color: rgb(49, 1, 46) !important;
 }
-
+.loading-bar {
+    width: 100%;
+    background-color: #f3f3f3;
+    border-radius: 2px;
+    margin-top: 10px;
+    overflow: hidden;
+    height: 4px;
+  }
+  
+  .loading-progress {
+    width: 0;
+    height: 100%;
+    background-color: #08325d;
+    animation: loading 40s infinite;
+  }
+  
+  @keyframes loading {
+    0% {
+      width: 0%;
+    }
+    
+    100% {
+      width: 100%;
+    }
+  }
+  
 
 .uploaded {
     margin-top: 30px;
